; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_invite_friend.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_invite_friend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32* }

@INVITE_PACKET_SIZE = common dso_local global i32 0, align 4
@INVITE_ID = common dso_local global i32 0, align 4
@GROUP_IDENTIFIER_LENGTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @invite_friend(%struct.TYPE_8__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_7__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call %struct.TYPE_7__* @get_group_c(%struct.TYPE_8__* %13, i32 %14)
  store %struct.TYPE_7__* %15, %struct.TYPE_7__** %8, align 8
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %17 = icmp ne %struct.TYPE_7__* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %52

19:                                               ; preds = %3
  %20 = load i32, i32* @INVITE_PACKET_SIZE, align 4
  %21 = zext i32 %20 to i64
  %22 = call i8* @llvm.stacksave()
  store i8* %22, i8** %9, align 8
  %23 = alloca i32, i64 %21, align 16
  store i64 %21, i64* %10, align 8
  %24 = load i32, i32* @INVITE_ID, align 4
  %25 = getelementptr inbounds i32, i32* %23, i64 0
  store i32 %24, i32* %25, align 16
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @htons(i32 %26)
  store i32 %27, i32* %11, align 4
  %28 = getelementptr inbounds i32, i32* %23, i64 1
  %29 = call i32 @memcpy(i32* %28, i32* %11, i32 4)
  %30 = getelementptr inbounds i32, i32* %23, i64 1
  %31 = getelementptr inbounds i32, i32* %30, i64 4
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %32, i32 0, i32 0
  %34 = load i32*, i32** %33, align 8
  %35 = load i32, i32* @GROUP_IDENTIFIER_LENGTH, align 4
  %36 = call i32 @memcpy(i32* %31, i32* %34, i32 %35)
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %38 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* %6, align 4
  %41 = mul nuw i64 4, %21
  %42 = trunc i64 %41 to i32
  %43 = call i64 @send_group_invite_packet(i32 %39, i32 %40, i32* %23, i32 %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %46

45:                                               ; preds = %19
  store i32 0, i32* %4, align 4
  store i32 1, i32* %12, align 4
  br label %50

46:                                               ; preds = %19
  %47 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %48 = load i32, i32* %7, align 4
  %49 = call i32 @wipe_group_chat(%struct.TYPE_8__* %47, i32 %48)
  store i32 -1, i32* %4, align 4
  store i32 1, i32* %12, align 4
  br label %50

50:                                               ; preds = %46, %45
  %51 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %51)
  br label %52

52:                                               ; preds = %50, %18
  %53 = load i32, i32* %4, align 4
  ret i32 %53
}

declare dso_local %struct.TYPE_7__* @get_group_c(%struct.TYPE_8__*, i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i64 @send_group_invite_packet(i32, i32, i32*, i32) #1

declare dso_local i32 @wipe_group_chat(%struct.TYPE_8__*, i32) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
